# Algatross

./: .dockerignore  .envrc  .gitattributes  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .gitmodules  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .prettierrc.json  .project.yaml  .releaserc  .secrets.baseline  .yamllint.yml  MAINTAINERS  Makefile  README.md  commitlint.config.js  hugo.toml  k8s_head_cmd.sh  k8s_head_entry.sh  k8s_print_logs.sh  make.bat  pagefind.yml  pyproject.toml  release.sh  renovate.json  requirements-dev.txt  requirements-docs.txt  requirements.txt  startup.sh  version_list.json
.scripts/vscode/: base_extensions.sh  dev_extensions.sh  user_extensions.sh
algatross/: __init__.py
algatross/actors/: ray_actor.py
algatross/agents/: base.py  torch_base.py
algatross/agents/off_policy/harl/: base.py
algatross/agents/on_policy/: ma_ppo.py  ppo.py
algatross/agents/on_policy/harl/: base.py  happo.py
algatross/algorithms/genetic/mo_aim/: __init__.py  algorithm.py  configs.py  population.py  problem.py  topology.py
algatross/configs/harl/: agents.py  algorithms.py  models.py  runners.py
algatross/configs/pyribs/: archive_config.py  emitter_config.py
algatross/environments/: __init__.py  pettingzoo_env.py  runners.py  utilities.py  wrappers.py
algatross/environments/common/: rendering.py
algatross/environments/harl/: env_tools.py
algatross/environments/harl/runners/: on_policy.py  on_policy_ha.py
algatross/environments/ma_inspection/: task_reward.py
algatross/environments/ma_inspection/inspection/: rendered_env.py  runner.py  task_reward_env.py
algatross/environments/mpe/: __init__.py  harl_env.py  rendering.py  simple.py  simple_speaker_listener.py  simple_spread.py  simple_tag.py
algatross/environments/smac/: smac_runner.py  smac_wrapper.py
algatross/experiments/: ray_experiment.py  test_det_experiment.py  test_mem_experiment.py
algatross/extreme_learning_machines/modules/: linear.py  sequential.py
algatross/extreme_learning_machines/utils/: init.py  ops.py
algatross/models/: elm.py  layers.py
algatross/models/encoders/: base.py  cnn.py  pca.py
algatross/quality_diversity/: visualization.py
algatross/quality_diversity/archives/: dask_array_store.py  unstructured.py  wrappers.py
algatross/quality_diversity/emitters/: random.py
algatross/utils/: cloud.py  compatibility.py  debugging.py  exceptions.py  io.py  merge_dicts.py  plotting.py  queue.py  random.py  sample_batch_builder.py  stats.py  timer.py  types.py
algatross/utils/loggers/: __init__.py  base_loggers.py  console_logger.py  constants.py  encoders.py  formatters.py  json_logger.py  logger_container.py  pandas_logger.py  remote_logger.py  shared_buffer.py  tensorboard.py
algatross/utils/parsers/: yaml_loader.py
config/: k8s_ray_cluster.yml  k8s_ray_cluster_debug.yml  mpe_environments.yml
config/ma_inspection/: algatross_base.yml  environments.yml  island_pop_config_base.yml  island_uda_config_base.yml  island_udp_config_base.yml  mainland_pop_config_base.yml  mainland_uda_config_base.yml  mainland_udp_config_base.yml  ppo_agent_base.yml  rl_pop_config_base.yml  rl_uda_config_base.yml  rl_udp_config_base.yml
config/ma_inspection/docking/: mo_marl.yml  mo_marl_debug.yml
config/ma_inspection/inspection/: mo-aim_island.yml  mo_marl.yml  mo_marl_debug.yml  mo_marl_mo-aim-1x1.yml  mo_marl_mo-aim-1x2.yml  mo_marl_mo-aim-1x3.yml  mo_marl_mo-aim-1x5.yml  mo_marl_mo-aim-1x8.yml  mo_marl_mt_mo-aim-1x9.yml  mo_marl_mt_mo-aim-1x9_v2.yml  mo_marl_ppo.yml  mo_marl_ppo_debug.yml  mo_marl_qdppo.yml  test_mo_marl.yml
config/ma_inspection/six_dof/: mo_marl.yml  mo_marl_debug.yml
config/ma_inspection/weighted_inspection/: mo_marl.yml  mo_marl_debug.yml
config/simple_spread/: algatross.yml  algatross_debug.yml  island_pop_config_base.yml  island_uda_config_base.yml  island_udp_config_base.yml  mainland_pop_config_base.yml  mainland_uda_config_base.yml  mainland_udp_config_base.yml  ppo_agent_base.yml  test_algatross.yml  test_algatross_ckpt.yml
config/simple_tag/: algatross.yml  algatross_debug.yml  algatross_k8s.yml  environments.yml  island_pop_config_base.yml  island_uda_config_base.yml  island_udp_config_base.yml  island_udp_config_base_ma_ppo.yml  mainland_udp_config_base.yml  test_algatross.yml  test_algatross_ckpt.yml  test_det_algatross.yml
config/simple_tag/autogen/: 0.yml
config/smacv2/: algatross.yml  algatross_debug.yml  env_base.yml  environments.yml  island_pop_config_base.yml  island_udp_config_base.yml  mainland_uda_config_base.yml  mainland_udp_config_base.yml  ppo_agent_base.yml  test_algatross.yml  test_island_pop_config_base.yml
config/smacv2/capability_configs/: protoss_10_vs_10.yml  protoss_10_vs_11.yml  protoss_20_vs_20.yml  protoss_20_vs_23.yml  protoss_5_vs_5.yml  terran_10_vs_10.yml  terran_10_vs_11.yml  terran_20_vs_20.yml  terran_20_vs_23.yml  terran_5_vs_5.yml  zerg_10_vs_10.yml  zerg_10_vs_11.yml  zerg_20_vs_20.yml  zerg_20_vs_23.yml  zerg_5_vs_5.yml
docs/source/hugo/: .gitignore
docs/source/hugo/archetypes/: developer_guide.md
docs/source/sphinx/: conf.py  index.rst  preprocess.py  type_aliases.yaml
pipeline/: linting_badges_config.json
scratches/: async_remote.py  elm_mnist.py  fast_pinv.py  imqrginv.py  ormqr.py  run_harl.py  topology.py  unstructured.py
scripts/: clear_empty_experiments.py
scripts/debug/: memray_recipe.py
scripts/debug/cleanrl/: cone.ipynb  plot_islands.py  plot_search.py  plotting_inspection.ipynb  plotting_island.ipynb  test_pz_seed.ipynb  train_moaim_island.py  train_moaim_mainland.py
scripts/docs/: auto_update_news.py  get_class_methods.py  homebrew_setup.sh
scripts/pipeline/: test_pipeline.sh  update_version_list.py
scripts/search/cleanrl/: ablation_xc.py  plot_search.ipynb  search_moaim_ppo.py
scripts/training/cleanrl/: train_classic_rllib.py  train_classic_tag.py  train_mappo_spread.py  train_moaim_ppo.py  tune_classic.py
scripts/visualize/cleanrl/: plot_islands_from_tf.py  plotting_from_tf.ipynb  visualize_moaim.py
test/: test_archive_wrapper.py  test_moaim_determinism.py
(+90 files in other folders)
